<resources>
    <string name="app_name">App Repositories</string>
    <string name="action_search">Search</string>
    <string name="twitter_user">Twitter User</string>
    <string name="login">\@%1s</string>
    <string name="member_since">Member since %1$s %2$s, %3$s</string>
    <string name="separator" translatable="false">•</string>
    <string name="n_following">%d Following</string>
    <string name="n_followers">%d Followers</string>
    <string name="hireable">Hireable</string>
    <string name="n_repositories">%d Repositories</string>
    <string name="send_mail">Send Mail</string>
    <string name="let_s_find_a_fantastic_profile_today">Let\'s find a fantastic profile today!</string>
    <string name="search">Search</string>
    <string name="error">Oops! Sorry, we fail to bring this profile to you.\nError: %s</string>
</resources>